# permutation-rs

./: Cargo.toml  README.md
src/: feistel.rs  lib.rs  permutation.rs  utils.rs
