[package]
name = "feistel-permutation-rs"
version = "0.1.2"
edition = "2021"
description = "Constant time, constant space permutations with Feistel Network ciphers."
license = "Apache-2.0"
repository = "https://github.com/drtconway/permutation-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
xxhash-rust = {version = "0.8.7", features = ["xxh64"]}
